--- a/MachineLearning/notebooks/ML_modelo_doenca_cardiaca.ipynb
+++ b/MachineLearning/notebooks/ML_modelo_doenca_cardiaca.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -11,6 +12,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/TiagoLinharess/ml_modelo_doenca_cardiovascular/blob/main/ML_modelo_doenca_cardiaca.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -28,6 +39,39 @@
       "metadata": {
         "id": "Sffb-52k8bMm"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Configuração do ambiente"
+      ],
+      "metadata": {
+        "id": "iR67HMbH2kZa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")\n",
+        "\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "uzBJLyR-2rsz"
+      },
+      "execution_count": 10,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -92,11 +136,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "0a6768a8-bd8a-4d74-d6a3-b9e2df5f3e12"
+        "outputId": "0cc2fd95-b8e7-478c-ff64-4ee75707543b"
       },
       "source": [
-        "import pandas as pd\n",
-        "\n",
         "# Carregar o dataset diretamente de uma URL\n",
         "url = \"https://raw.githubusercontent.com/carlosfab/curso_data_science_na_pratica/master/modulo_03/heart-disease-uci.csv\"\n",
         "data = pd.read_csv(url, delimiter=',')\n",
@@ -104,7 +146,7 @@
         "# Exibir as primeiras linhas do dataset\n",
         "data.head()"
       ],
-      "execution_count": 1,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -126,7 +168,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ef3ef02e-c55b-4b5d-825b-e6091d786e4f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e0f93957-1081-481d-a18f-6187e3ebb516\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -253,7 +295,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ef3ef02e-c55b-4b5d-825b-e6091d786e4f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e0f93957-1081-481d-a18f-6187e3ebb516')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -305,12 +347,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ef3ef02e-c55b-4b5d-825b-e6091d786e4f button.colab-df-convert');\n",
+              "        document.querySelector('#df-e0f93957-1081-481d-a18f-6187e3ebb516 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ef3ef02e-c55b-4b5d-825b-e6091d786e4f');\n",
+              "        const element = document.querySelector('#df-e0f93957-1081-481d-a18f-6187e3ebb516');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -330,8 +372,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-1419659e-7a0e-48af-bb31-c1982f804060\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1419659e-7a0e-48af-bb31-c1982f804060')\"\n",
+              "<div id=\"df-0947c221-add8-46ec-ab20-d3b499884fdf\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0947c221-add8-46ec-ab20-d3b499884fdf')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -450,7 +492,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-1419659e-7a0e-48af-bb31-c1982f804060 button');\n",
+              "        document.querySelector('#df-0947c221-add8-46ec-ab20-d3b499884fdf button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -467,7 +509,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 11
         }
       ]
     },
@@ -483,8 +525,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "\n",
         "# Criar um gráfico de comparação da idade entre homens e mulheres\n",
         "plt.figure(figsize=(10, 6))\n",
         "plt.hist([data.loc[data['sex'] == 0, 'age'], data.loc[data['sex'] == 1, 'age']], bins=20, label=['Feminino', 'Masculino'], color=['pink', 'blue'])\n",
@@ -500,9 +540,9 @@
           "height": 564
         },
         "id": "pmUEDMjv-Mm1",
-        "outputId": "6c632c09-7818-45c2-b1c5-421cae23f8c0"
+        "outputId": "56f3c179-b5f9-4a0e-d8c7-676e5c208f73"
       },
-      "execution_count": 2,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -528,8 +568,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "\n",
         "plt.figure(figsize=(10, 6))\n",
         "plt.hist([data.loc[(data['sex'] == 0) & (data['num'] > 0), 'age'],\n",
         "          data.loc[(data['sex'] == 1) & (data['num'] > 0), 'age']],\n",
@@ -547,9 +585,9 @@
           "height": 564
         },
         "id": "fE5vAHow-xBY",
-        "outputId": "3a8923a2-8360-4639-f15e-9212b6a37ded"
+        "outputId": "de30abfc-b0bc-4219-aaa3-f4dc4606996b"
       },
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -587,22 +625,19 @@
         "id": "29AFuCPtvG_i"
       },
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "\n",
         "# Separar as features e o target\n",
         "X = data.drop('num', axis=1)\n",
         "y = data['num']\n",
         "\n",
         "# Dividir o dataset em treino e teste\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=40)\n",
         "\n",
         "# Normalizar os dados\n",
         "scaler = StandardScaler()\n",
         "X_train = scaler.fit_transform(X_train)\n",
         "X_test = scaler.transform(X_test)"
       ],
-      "execution_count": 4,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -630,15 +665,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9a284627-560c-4e37-b6cd-89e46fa79925"
+        "outputId": "1e798ec1-61e7-4d1d-b67e-f5a102b6f848"
       },
       "source": [
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.naive_bayes import GaussianNB\n",
-        "from sklearn.svm import SVC\n",
-        "from sklearn.model_selection import cross_val_score\n",
-        "\n",
         "# KNN\n",
         "knn = KNeighborsClassifier()\n",
         "knn.fit(X_train, y_train)\n",
@@ -665,15 +694,15 @@
         "print(f\"Naive Bayes Accuracy: {nb_scores.mean()}\")\n",
         "print(f\"SVM Accuracy: {svm_scores.mean()}\")"
       ],
-      "execution_count": 5,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "KNN Accuracy: 0.5788265306122449\n",
-            "Decision Tree Accuracy: 0.5040816326530612\n",
-            "Naive Bayes Accuracy: 0.35603741496598634\n",
+            "KNN Accuracy: 0.5991496598639456\n",
+            "Decision Tree Accuracy: 0.4836734693877551\n",
+            "Naive Bayes Accuracy: 0.3431122448979592\n",
             "SVM Accuracy: 0.5950680272108844\n"
           ]
         }
@@ -704,7 +733,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5540416c-789e-4533-b45f-221df7f675dc"
+        "outputId": "27194382-57ad-431b-afb3-ead62c759fe2"
       },
       "source": [
         "from sklearn.model_selection import GridSearchCV\n",
@@ -716,7 +745,7 @@
         "\n",
         "print(f\"Melhor parâmetro para KNN: {grid_search.best_params_}\")"
       ],
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,8 +777,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-        "\n",
         "# Avaliação no conjunto de teste\n",
         "y_pred = knn.predict(X_test)\n",
         "\n",
@@ -764,18 +791,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dd9307e9-78a0-44bc-d7af-7b72db16e85f"
+        "outputId": "83be36b6-225d-4bc3-82ce-c99cfa16616b"
       },
-      "execution_count": 7,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 0.5573770491803278\n",
-            "Precision (weighted): 0.47908986325724895\n",
-            "Recall (weighted): 0.5573770491803278\n",
-            "F1 Score (weighted): 0.50634242314068\n"
+            "Accuracy: 0.5901639344262295\n",
+            "Precision (weighted): 0.5461940992570845\n",
+            "Recall (weighted): 0.5901639344262295\n",
+            "F1 Score (weighted): 0.5654178206951618\n"
           ]
         }
       ]
@@ -805,14 +832,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "de5d4414-d56a-418a-c757-80e389650849"
+        "outputId": "f633ac4f-189e-4870-e2de-edda21a03f28"
       },
       "source": [
-        "import numpy as np\n",
-        "\n",
         "# Exemplo de novos dados (não vistos pelo modelo)\n",
         "# Cada linha representa um novo exemplo com as mesmas features do dataset original\n",
-        "new_data = np.array([[63, 1, 3, 160, 285, 1, 2, 200, 1, 3.5, 3, 3, 7],  # Exemplo 1\n",
+        "new_data = np.array([[63, 1, 3, 160, 200, 1, 2, 200, 1, 3.5, 3, 3, 3],  # Exemplo 1\n",
         "                     [37, 0, 2, 130, 250, 0, 1, 187, 0, 3.5, 0, 0, 2],  # Exemplo 2\n",
         "                     [41, 1, 1, 130, 204, 0, 0, 172, 0, 1.4, 2, 0, 2]]) # Exemplo 3\n",
         "\n",
@@ -832,13 +857,13 @@
         "for i, pred in enumerate(predictions):\n",
         "    print(f\"Exemplo {i+1}: Predição = {pred}\")"
       ],
-      "execution_count": 8,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Exemplo 1: Predição = 3\n",
+            "Exemplo 1: Predição = 2\n",
             "Exemplo 2: Predição = 0\n",
             "Exemplo 3: Predição = 0\n"
           ]
